compilateurDeca/src/test/deca/context/invalid/objet/declarations/double_declaration_param.deca
// Description:
//    Test de contexte : paramètres de même nom.
//
// Resultats:
//    Erreur contextuelle
//
// Historique:
//    cree le 13/01/2026

class A {
    void m(int x, int x) {
    }
}
{
}